Fix two minor main menu bar CSS issues
Summary:
Ref T13263.

  - Make the user profile section of the "Profile" dropdown menu have a transparent background, not a white background. This is a pre-existing issue. This is normally hard to see, but visible on Workboards with custom background colors.
  - Fix an alignment issue with the little "V" caret in the search scope dropdown. This is a recent issue caused by some tab-caret CSS I added recently for tabbed dashboard panels.

Test Plan:
Before:

{F6367723}

After:

{F6367724}

Reviewers: amckinley

Reviewed By: amckinley

Maniphest Tasks: T13263

Differential Revision: https://secure.phabricator.com/D20388

--- a/webroot/rsrc/css/application/base/main-menu-view.css
+++ b/webroot/rsrc/css/application/base/main-menu-view.css
@@ -650,6 +650,7 @@ ul.phabricator-core-user-profile-object .phui-oi-content,
 ul.phabricator-core-user-profile-object .phui-oi-subhead {
   padding: 0;
   margin: 0;
+  background: transparent;
 }
 
 ul.phabricator-core-user-profile-object.phui-oi-list-simple .phui-oi-image {
