--- a/webroot/rsrc/css/phui/phui-action-list.css
+++ b/webroot/rsrc/css/phui/phui-action-list.css
@@ -214,11 +214,11 @@
     color: {$sky};
 }
 
-.phui-list-item-view.dropdown .phui-list-item-href {
+.phui-list-navbar .phui-list-item-view.dropdown .phui-list-item-href {
   padding-right: 28px;
 }
 
-.phui-list-item-view .caret {
+.phui-list-navbar .phui-list-item-view .caret {
   position: absolute;
   top: 6px;
   right: 12px;
